[workspace]
members = [
  ".",
  "lib/html_and_tar",
  "bin/wasi-document",
  "wasi-loader/interpret",
  "stage3/unzip",
  # Application for stage3/unzip
  "examples/wasi/plotters-normal-2d",
]

exclude = [
	"examples/GladiusSlicer/GladiusSlicer",
	"examples/fidget/fidget",
]

default-members = ["bin/wasi-document"]
resolver = "2"

[workspace.dependencies]
html_and_tar = { path = "lib/html_and_tar" }

[profile.release]
opt-level = 's'
strip = true
