[workspace]
members = [
  ".",
  "lib/html_and_tar",
  "bin/polywrap",
  "bin/wasi-document",
  "stage2-loader/interpret",
  "stage3-kernel/unzip",
  # Application for stage3/unzip
  "examples/wasi/plotters-normal-2d", "lib/wasi-document-dom",
]

exclude = [
	"examples/GladiusSlicer/GladiusSlicer",
	"examples/fidget/fidget",
]

default-members = ["bin/wasi-document"]
resolver = "2"

[workspace.dependencies]
html_and_tar = { path = "lib/html_and_tar" }
serde = {version = "1", features = ["derive"] }
toml = "0.9"
wasi-document-dom = { path = "lib/wasi-document-dom" }

[workspace.dependencies.clap]
version = "4"
features = ["derive"]
[workspace.dependencies.base64]
version = "0.21.4"
default-features = false
features = ["alloc"]
[workspace.dependencies.lithtml]
version = "0.7.0"

[profile.release]
opt-level = 's'
strip = true
