[package]
name = "developable-surface"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
# Nice but wholly unsafe and does not really target web.
# glow = "0.17.0"
# Please under NO circumstance use any of mingl,minwebgl.
glsmrs = "0.2.0"
log = "0.4"
tobj = { version = "4.0.3", default-features = false }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = { version = "0.4.64", features = ["futures-core-03-stream"] }
web-sys = "0.3.91"
